# stage_m1

./: .gitignore  .ocamlformat  README.md  TODO.md  constrained_generation.opam  coverage.sh  debug.sh  dune  run.sh  save.txt
notes/: notes.txt
scripts/: extract.sh  publish.sh
src/: Choice.ml  ChoicePath.ml  ChoicePathLexer.mll  ChoicePathParser.mly  ChoicePathPrinter.ml  ChoicePathPrinter.mli  Constraint.ml  ConstraintPrinter.ml  ConstraintPrinter.mli  ConstraintSimplifier.ml  ConstraintSimplifier.mli  ConstraintTypes.ml  Debug.ml  Debug.mli  Decode.ml  Decode.mli  FPrinter.ml  FPrinter.mli  Generalization.ml  Generalization.mli  Generator.ml  Generator.mli  Infer.ml  Infer.mli  InfiniteArray.ml  InfiniteArray.mli  MRand.ml  MRand.mli  MRand_full_removal.ml  MRand_full_removal_with_reset.ml  MRand_local_retries.ml  MRand_local_retries_with_reset.ml  MSeq.ml  MSeq.mli  Printer.ml  RandomGenerator.ml  STLC.ml  STLCPrinter.ml  STLCPrinter.mli  SatConstraint.ml  (+20 more)
src/support/: ConstraintPrinter.ml  ConstraintPrinter.mli  ConstraintSimplifier.ml  Debug.ml  Debug.mli  Decode.ml  Printer.ml  STLCPrinter.ml  SatConstraint.ml  UntypedLexer.mll  UntypedParser.mly  UntypedPrinter.ml  dune
tests/: ChoiceTest.ml  choicepath.t  dune
tests.t/: bad-funannot.test  error_poly_def.test  funannot.test  id_poly2.test  id_poly_with_let.test  let_easy.test  let_poly.test  letfun.test  log_solver.test  poly-conflict.test  poly1.test  poly_annot_use.test  poly_easy_use.test  poly_silent_var.test  poly_use.test  run.t  tuple_poly_annot_use.test  tuple_poly_use.test  wu_bug.t
(+8 files in other folders)
