(include_subdirs unqualified) ;; also look in subdirectories

(library
  (name constrained_generation)
  (instrumentation (backend bisect_ppx)) ;; Code coverage analysis
  (public_name constrained_generation)
  (synopsis "A random program generator based on constraint solving")
  (libraries unionFind pprint)
  (wrapped false)
)
