(library
 (name constrained_generation)
 (public_name constrained_generation)
 (synopsis "A random program generator based on constraint solving")
 (libraries unionFind pprint menhirLib)
 (wrapped false))

(ocamllex UntypedLexer ChoicePathLexer)

(menhir
 (modules UntypedParser ChoicePathParser)
 (flags --explain))
